# beepub

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  migrate.sh  pyproject.toml  start-worker-dev.sh  start-worker.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_make_email_nullable.py  003_add_illustrations.py  004_add_reading_status_and_notes.py  005_add_reading_activity.py  006_add_calibre_fields.py  007_add_calibre_added_at.py  008_add_app_settings.py  009_add_word_count.py  010_add_series_and_tags.py  011_add_ai_book_tags.py  012_add_companion_tables.py  013_add_book_text_chunks.py  014_companion_multi_session.py  015_add_book_embedding_chunks.py  016_add_llm_usage_log.py  017_add_daily_reading_goal.py  018_add_keyword_search_index.py  018_fix_text_chunk_unique_constraint.py  019_add_keyword_search_index.py  020_add_book_summary_embeddings.py  021_change_embedding_dims_to_1024.py  022_remove_email_column.py  022_rename_book_embeddings_add_source.py  023_rename_book_embeddings_add_source.py  024_add_is_image_book.py  025_add_book_reports.py  026_replace_ai_book_tags_with_book_tags.py  027_user_permissions_and_library_exclusions.py  028_add_library_auto_sync.py  029_add_job_query_indexes.py  030_add_book_status_flags.py  (+3 more)
backend/app/: celeryapp.py  config.py  database.py  deps.py  logging.py  main.py
backend/scripts/: remap_tags.py
backend/tests/: conftest.py  test_all_books.py  test_auth_endpoints.py  test_auth_service.py  test_bulk_jobs.py  test_calibre_sync.py  test_embedding.py  test_epub_text.py  test_goodreads_source.py  test_job_queue.py  test_keyword_search.py  test_llm_usage.py  test_logging.py  test_permissions.py  test_reading_streaks.py  test_readmoo_source.py  test_semantic_similar_books.py  test_series_neighbors.py  test_storage.py  test_text_chunking.py
metadata-daemon/: Dockerfile  pyproject.toml
metadata-daemon/daemon/: config.py  database.py  main.py  queue.py  scheduler.py
metadata-daemon/tests/: test_goodreads_source.py  test_kobo_tw_source.py  test_readmoo_source.py
(+318 files in other folders)
