[project]
name = "beepub-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.12",
    "lxml>=4.9.0",
    "six>=1.16.0",
    "Pillow>=10.4.0",
    "redis>=5.1.1",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pydantic[email]>=2.9.2",
    "celery[redis]>=5.4.0",
    "beautifulsoup4>=4.12.3",
    "rapidfuzz>=3.10.0",
    "structlog>=25.5.0",
    "pgvector>=0.3.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["app/vendor/ebooklib"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
