[project]
name = "beepub-metadata-daemon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "redis>=5.1.1",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "rapidfuzz>=3.10.0",
    "APScheduler>=3.10.4",
    "pydantic-settings>=2.5.2",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]